feature: add e2e test

--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@lvce-editor/extension-host-sub-worker": "^3.14.0",
     "@lvce-editor/test-with-playwright": "^2.12.0"
   }
 }
