--- a/packages/iframe-inspector/package.json
+++ b/packages/iframe-inspector/package.json
@@ -12,6 +12,7 @@
   "main": "src/iframeInspectorWorkerMain.ts",
   "scripts": {
     "test": "node --unhandled-rejections=warn --experimental-vm-modules ./node_modules/jest/bin/jest.js --detectOpenHandles --forceExit",
+    "build:watch": "cd ../../ && npm run build:watch",
     "test:watch": "node --unhandled-rejections=warn --experimental-vm-modules ./node_modules/jest/bin/jest.js --watch"
   },
   "jest": {
