feature: add build watch script (#227)
* feature: add build watch script

* lint

--- a/packages/iframe-inspector/package.json
+++ b/packages/iframe-inspector/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "main": "src/iframeInspectorWorkerMain.ts",
   "scripts": {
+    "build:watch": "cd ../../ && npm run build:watch",
     "test": "node --unhandled-rejections=warn --experimental-vm-modules ./node_modules/jest/bin/jest.js --detectOpenHandles --forceExit",
     "test:watch": "node --unhandled-rejections=warn --experimental-vm-modules ./node_modules/jest/bin/jest.js --watch"
   },
